--- a/style.css
+++ b/style.css
@@ -254,3 +254,24 @@ header div {
   padding: 3px 6px 3px 6px;
   border-radius: 10%;
 }
+.selections{
+  padding: 15px;
+  border-radius: 10%;
+  color: #6b7280;
+}
+.selection_notify{
+  padding: 6px;
+  border-radius: 10%;
+  color: #6b7280;
+}
+.notifiche_butt{
+  padding: 6px 10px;
+  text-align: center;
+  border-radius: 6px;
+  border: none;
+  font-weight: 200;
+  background-color: #12598b;
+  color: white;
+  cursor: pointer;
+  font-family: "Rajdhani", sans-serif;
+}
